_sass/_docs.scss
.docs-container {
	> .wrapper {
		display: flex;
		flex-wrap: wrap;
		padding-top:0;
		padding-bottom: 0;
	}
	.docs-nav {
		flex: 1 1 100%;

		> ul {
			padding: 0;
			margin: 0;
		}
	}

	.docs-main {
		background: #fff;
		flex: 3 1 500px;

		.content {
			max-width: 800px;
			padding: 0 25px;
			margin: 20px auto 1.75em auto;
		}
	}

	@media (min-width: 800px) {
		.docs-nav,
		.docs-main {
			padding: 20px 0;
		}

		.docs-nav {
			padding: 40px 0 20px 0;
			flex: 0 1 230px;
			align-self: flex-start;
			position: sticky;
			top: 0;

			> ul {
				border-right: 1px solid #eee;
			}
		}
	}

	.docs-category {
		color: #888;
		font-size: 1.5rem;
		margin: 0;
	}

	h2 {
		font-size: 2.5rem;
	}
}

.nav-item {
	display: block;
	line-height: 1;
	font-size: 1rem;
	margin: 0;
	padding: 0;

	> ul {
		margin: 0;
		padding: 0;
	}

	nav:not(.full-navigation) & > ul {
		display: none;
	}

	nav:not(.full-navigation) &.current > ul {
		display: block;
	}

	> a {
		color: $brand-color;
		text-decoration: none;
		padding: 5px 10px;
		display: block;
		border-left: 5px solid #f8f8f8;
		margin: 0 0 5px 0;

		&:hover {
			border-left-color: $brand-color;
		}
	}

	&.current > a,
	&.current > a:active,
	&.current > a:hover {
		color: #111;
		border-left-color: #111;
	}

	&.top-level > a {
		line-height: 1.5;
		font-weight: bold;
		padding-left: 0;
		font-size: 0.9rem;
		margin: 0;
		text-transform: uppercase;
		color: #888;
		border: 0;
	}

	&.top-level + .top-level {
		border-top: 1px solid #eee;
		padding-top: 10px;
		margin-top: 10px;
	}
}

.settings-panel-example {
	@extend p;
	display: flex;
	flex-direction: column;

	.example {
		max-width: 300px;
		background-color: #fafafa;
		margin: 0;
		padding: 0;
		font-size: 0;
		line-height: 1;
		border-radius: 2px;
		overflow: hidden;
	}

	@media (min-width: 960px) {
		flex-direction: row;

		.details {
			flex: 1;
			margin-right: 20px;
		}

		p + .highlight > pre {
			margin-bottom: 0;
		}

		.example {
			flex: 0 0 300px;
			max-width: 100%;
		}
	}
}

